tests/Toimik.WarcProtocol.Tests/Data/Invalid/premature_wo_trailing_newline.warc
WARC/1.1
WARC-Date: 2000-01-01T12:34:56Z
WARC-Record-ID: <urn:uuid:6a59c5c8-d806-4cdb-83aa-b21495d11063>
WARC-Type: response
Content-Length: 0